--- a/css/estilos.css
+++ b/css/estilos.css
@@ -136,8 +136,17 @@ img{
     left: 50%;
     overflow: auto;
     position: absolute !important;
-    height: 200px;
+    height: 300px;
     box-sizing: border-box;
     text-align: justify;
     margin: 80px 0px 0px -100px !important;
+    background-color: rgba(0,0,0,0.5);
+    padding: 28px;
+    border-radius: 7px;
+}
+
+.fotoBio {
+    position: absolute;
+    top: 100px;
+    left: 200px;    
 }
